--- a/app/src/main/resources/static/css/register.css
+++ b/app/src/main/resources/static/css/register.css
@@ -1,6 +1,6 @@
 /* General Styles */
 body {
-    background: linear-gradient(to right, #4e54c8, #8f94fb);
+    background: linear-gradient(to right, #347eaa, #8f94fb);
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
@@ -18,6 +18,11 @@ header, footer {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+}
+.logo-big img {
+    display: inline-block;
+    width: 100%;
+    height: auto;
 }
 
 /* Center content */
