--- a/app/src/main/resources/templates/comments.html
+++ b/app/src/main/resources/templates/comments.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Comments</title>
-    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" href="comments.css">
 
 </head>
 <section>
