--- a/app/src/main/resources/templates/login.html
+++ b/app/src/main/resources/templates/login.html
@@ -2,23 +2,40 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Login</title>
-    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" href="login_register.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
     <h1>Login</h1>
 </header>
 
-<section>
-    <form th:action="@{/login}" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
+    <section class="section full-height">
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
+        <div class="container">
+            <a th:href="@{/}" class="logo-big">
+                <img src="Morsel-logo.jpg" alt="Logo Image">
+            </a>
+        </div>
 
-        <button type="submit">Login</button>
-    </form>
+        <label for="username">Username</label>
+        <input type="text" placeholder="Username" id="username" th:field="*{username}">
+        <p class="alert-warning" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
+
+        <label for="password">Password</label>
+        <input type="password" placeholder="Password" id="password" th:field="*{password}">
+        <p class="alert-warning" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
+
+        <button type="submit">Log In</button>
+
+        <p class="form-already">Don't have an account? <a th:href="@{/register}">Register now</a>!</p>
+        </form>
 </section>
+
 </body>
 </html>
