--- a/app/src/main/resources/templates/admin_users.html
+++ b/app/src/main/resources/templates/admin_users.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Admin - Manage Users</title>
-    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" href="admin.css">
 </head>
 <body>
 <header>
