--- a/app/src/main/resources/templates/index.html
+++ b/app/src/main/resources/templates/index.html
@@ -2,11 +2,11 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"><head>
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <title>Home</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/index.css}">
+    <title>Index</title>
 </head>
 <body>
 <header class="header">
@@ -19,10 +19,11 @@
 </header>
 <main>
     <div class="logo-container">
-        <a href="/" class="logo-big">
-            <img src="Morsel-logo.jpg" alt="Logo Image">
+        <a th:href="@{/}" class="logo-big">
+            <img src="/image/Morsel-logo.jpg" alt="Logo Image">
         </a>
     </div>
 </main>
+
 <th:block th:insert="fragments/footer :: footer"></th:block>
 </body></html>
