--- a/app/src/main/resources/templates/posts.html
+++ b/app/src/main/resources/templates/posts.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>View Post</title>
-    <link rel="stylesheet" href="post.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/post.css}">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
