--- a/app/src/main/resources/templates/profile-menu.html
+++ b/app/src/main/resources/templates/profile-menu.html
@@ -3,12 +3,12 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="profile-menu.css">
+    <link rel="stylesheet" href="../static/css/profile-menu.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="stylesheet" type="text/css" th:href="@{/css/profile-menu.css}">
     <title>Edit Profile</title>
 </head>
 <body>
