--- a/app/src/main/resources/templates/user-reports.html
+++ b/app/src/main/resources/templates/user-reports.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User System Report</title>
-    <link rel="stylesheet" href="user-reports.css">
+    <link rel="stylesheet" href="../static/css/user-reports.css">
 </head>
 <body>
 <div class="report-container">
