--- a/app/src/main/resources/templates/createRecipe.html
+++ b/app/src/main/resources/templates/createRecipe.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Create Post</title>
-    <link rel="stylesheet" href="post.css">
+    <link rel="stylesheet" href="../static/css/post.css">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
