--- a/app/src/main/resources/templates/reports.html
+++ b/app/src/main/resources/templates/reports.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>System Reports</title>
-    <link rel="stylesheet" href="reports.css">
-</head>
+<meta charset="UTF-8">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" type="text/css" th:href="@{/css/reports.css}">
+<title>Login</title>
 <body>
 <header class="reports-header">
     <h1>System Reports</h1>
@@ -53,9 +57,6 @@
 
 </main>
 
-<footer>
-    <p>&copy; 2025 Recipe App | All Rights Reserved</p>
-</footer>
 
 <script src="/js/reports.js"></script>
 </body>
