--- a/app/src/main/resources/templates/profile-menu.html
+++ b/app/src/main/resources/templates/profile-menu.html
@@ -80,6 +80,6 @@
         </div>
     </div>
 </main>
-<div class="footer" th:insert="~{fragments/common/footer :: footer}"></div>
+<div class="footer" th:insert="~{fragments/footer :: footer}"></div>
 </body>
 </html>
