--- a/app/src/main/resources/templates/register.html
+++ b/app/src/main/resources/templates/register.html
@@ -41,6 +41,6 @@
     </form>
 </section>
 </main>
-<div class="footer" th:insert="~{fragments/common/footer :: footer}"></div>
+<div class="footer" th:insert="~{fragments/footer :: footer}"></div>
 </body>
 </html>
