--- a/app/src/main/resources/templates/reports.html
+++ b/app/src/main/resources/templates/reports.html
@@ -56,8 +56,6 @@
     </section>
 
 </main>
-
-
-<script src="/js/reports.js"></script>
+<div class="footer" th:insert="~{fragments/footer :: footer}"></div>
 </body>
 </html>
