--- a/app/src/main/resources/templates/user-reports.html
+++ b/app/src/main/resources/templates/user-reports.html
@@ -31,7 +31,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Your Company</p>
+        <div class="footer" th:insert="~{fragments/footer :: footer}"></div>
     </footer>
 </div>
 </body>
