--- a/app/src/main/resources/templates/login.html
+++ b/app/src/main/resources/templates/login.html
@@ -14,7 +14,7 @@
 <header>
     <h1>Login</h1>
 </header>
-
+<main>
     <section class="section full-height">
 
         <div class="container">
@@ -42,6 +42,6 @@
         <p class="form-already">Don't have an account? <a th:href="@{/register}">Register now</a>!</p>
         </form>
 </section>
-
+</main>
 </body>
 </html>
